--- a/TeamApex/src/main/resources/templates/login.html
+++ b/TeamApex/src/main/resources/templates/login.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>This is a login page.</h1>
+<form method="post" action="/login">
+	Phonenumber<input type="text" name="phonenumber"><br><br>
+	Password<input type="password" name="password"><br><br>
+	<input type="submit" value="Login"><br><br>
+</form>
 </body>
 </html>
