--- a/TeamApex/src/main/resources/templates/login.html
+++ b/TeamApex/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,5 +12,6 @@
 	Password<input type="password" name="password"><br><br>
 	<input type="submit" value="Login"><br><br>
 </form>
+<a href="/signup">Signup</a>
 </body>
 </html>
