--- a/TeamApex/src/main/resources/templates/signup.html
+++ b/TeamApex/src/main/resources/templates/signup.html
@@ -1,19 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Signup</title>
+<!-- <meta charset="UTF-8"> -->
+<!-- <title>Signup</title> -->
+<!-- </head> -->
+<!-- <body> -->
+<!-- <h1>This is signup page</h1> -->
+
+<!-- <form method="post" action="/register"> -->
+<!-- Fullname <input type="text" name="fullname"><br><br> -->
+<!-- Phonenumber <input type="text" name="phonenumber"><br><br> -->
+<!-- Password <input type="password" name="password"><br><br> -->
+<!-- ConfirmPassword <input type="password" name="confirmpassword"><br><br> -->
+<!-- <input type="submit" value="Register"><br><br> -->
+<!-- </form> -->
+<!-- </form> -->
+<!-- </body> -->
+<!-- </html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup </title>
+  <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+
 </head>
 <body>
-<h1>This is signup page</h1>
+  <div class="wrapper">
+    <img class="logo-icon" alt="" src="./image/logo.png" />
+    <h3>Citizen's Voice</h3>
+    <h3 class="h3">सिद्दा कुरा सरकार सित</h3>
+    <form method="post" action="/register">
+      <div class="field name">
+        <div class="input-area">
+          <input type="text" placeholder="Full Name" name="fullname" required>
+          <i class="icon fas fa-user"></i>
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Phone Number can't be blank</div>
+      </div>
 
-<form method="post" action="/register">
-Fullname <input type="text" name="fullname"><br><br>
-Phonenumber <input type="text" name="phonenumber"><br><br>
-Password <input type="password" name="password"><br><br>
-ConfirmPassword <input type="password" name="confirmpassword"><br><br>
-<input type="submit" value="Register"><br><br>
-</form>
-</form>
+      <div class="field email">
+        <div class="input-area">
+          <input type="text" placeholder="PhoneNumber" name="phonenumber" required>
+          <i class="icon fas fa-phone"></i>
+
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Phone Number can't be blank</div>
+      </div>
+      <div class="field password">
+        <div class="input-area">
+          <input type="password" placeholder="Password" name="password" required>
+          <i class="icon fas fa-lock"></i>
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Password can't be blank</div>
+      </div>
+      <div class="field cpassword">
+        <div class="input-area">
+          <input type="password" placeholder="Confirm Password" name="confirmpassword" required>
+          <i class="icon fas fa-lock"></i>
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Password can't be blank</div>
+      </div>
+  
+      <input type="submit" value="Signup">
+    </form>
+    <div class="sign-txt">Already had an account? <a href="/login">Login now</a></div>
+    <div class="sign-txt">By Signing up, you will agree our  <a href="#" style="color: #FF0000;">Terms and Condition</a></div>
+
+  </div>
+
 </body>
 </html>
