--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Post</title>
 </head>
 <body>
     <h1>Create a Post</h1>
-    <form action="submit_post" method="POST" enctype="multipart/form-data">
+    <form action="#" th:action="@{/submitPost}" method="POST" enctype="multipart/form-data">
         <label for="category">Category:</label><br>
         <input type="text" id="category" name="category"><br><br>
         
@@ -24,3 +24,4 @@
     </form>
 </body>
 </html>
+
