--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Create a Post</h1>
-    <form action="#" th:action="@{/submitPost}" method="POST" enctype="multipart/form-data">
+    <form action="#" th:action="@{/upload}" method="POST" enctype="multipart/form-data">
         <label for="category">Category:</label><br>
         <input type="text" id="category" name="category"><br><br>
         
