--- a/TeamApex/src/main/resources/templates/signup.html
+++ b/TeamApex/src/main/resources/templates/signup.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!-- <!DOCTYPE html> -->
+<!-- <html> -->
+<!-- <head> -->
 <!-- <meta charset="UTF-8"> -->
 <!-- <title>Signup</title> -->
 <!-- </head> -->
