--- a/TeamApex/src/main/resources/templates/PostPicture.html
+++ b/TeamApex/src/main/resources/templates/PostPicture.html
@@ -8,11 +8,11 @@
 <body>
 <h1>This is post picture page</h1>
 
-<form method="post" action="/postPictureForm">
+<form method="post" action="/postPictureForm" enctype="multipart/form-data">
 Category <input type="text" name="category"><br><br>
 Location <input type="text" name="location"><br><br>
 Description <input type="text" name="description"><br><br>
-Image <input type="text" name="image"><br><br>
+Image <input type="file" name="image"><br><br>
 <input type="submit" value="Post"><br><br>
 </form>
 </body>
